# haibot

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
backend/haibot/: constant.py
backend/haibot/agents/: __init__.py  model_factory.py  prompt.py  react_agent.py  skills_manager.py
backend/haibot/agents/hooks/: __init__.py
backend/haibot/app/: _app.py
backend/haibot/cli/: app_cmd.py  channels_cmd.py  chats_cmd.py  clean_cmd.py  main.py  providers_cmd.py
backend/haibot/config/: config.py
backend/haibot/console/: index.html
backend/haibot/envs/: envs.json  store.py
backend/haibot/providers/: models.py  registry.py  store.py
backend/haibot/utils/: logging.py
backend/tests/agents/: test_skills_flags.py  test_workspace_isolation.py
backend/tests/app/: test_memory_isolation.py
backend/tests/group_chat/: test_mention_parser.py  test_orchestrator.py  test_repo.py  test_stream_merger.py
docs/plans/: 2026-03-07-group-chat-design.md  2026-03-07-group-chat.md  2026-03-10-three-column-chat-layout.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: agents.ts  channels.ts  chats.ts  crons.ts  envs.ts  group_chats.ts  index.ts  mcp.ts  models.ts  skills.ts  workspace.ts
frontend/src/i18n/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  chat.ts
frontend/src/types/: agent.ts  channel.ts  chat.ts  cron.ts  env.ts  group_chat.ts  index.ts  mcp.ts  model.ts  skill.ts  workspace.ts
frontend/src/utils/: useMarkdown.ts  useTheme.ts  uuid.ts
(+88 files in other folders)
