[project]
name = "haibot"
version = "0.1.0"
description = "HaiBot is a **personal assistant**"
readme = "README.md"
requires-python = ">3.10,<=3.13"
dependencies = [
    "agentscope==1.0.16.dev0",
    "agentscope-runtime==1.1.0b2",
    "discord-py>=2.3",
    "apscheduler>=3.11.2,<4",
    "dingtalk-stream>=0.24.3",
    "uvicorn>=0.40.0",
    "apscheduler>=3.11.2",
    "playwright>=1.49.0",
    "questionary>=2.1.1",
    "mss>=9.0.0",
    "reme-ai==0.3.0.0a9",
    "transformers>=4.30.0",
    "python-dotenv>=1.0.0",
    "onnxruntime<1.24",
    "lark-oapi>=1.5.3",
]


[tool.setuptools.dynamic]
version = {attr = "haibot.__version__.__version__"}

[tool.setuptools]
packages = { find = { where = ["backend"] } }
include-package-data = true

[tool.setuptools.package-data]
# Dockerfile copies console build output to backend/haibot/console/ (no dist subdir).
"haibot" = [
    "console/**",
    "agents/md_files/**",
    "agents/skills/**",
    "tokenizer/**",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
haibot = "haibot.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
